--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <html> <head> <title>
-BEM VINDO AO NOSSO PORTAL
+Bem vindo ao nosso portal
 </title>
 </head>
 <body>
-<h1> <font color=red> Bem-vindo ao Gaelflix, o seu portal de entretenimento!!! </h1>
-</font color=red>
-<body bgcolor=white>
-<p> <hr> <p> Clique na opção desajada: <p>
-<iframe width="560" height="315" src="https://www.youtube.com/embed/JE0eBMP9CLI?si=tHb-jF0IFhI7wa2Z" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-<iframe width="560" height="315" src="https://www.youtube.com/embed/ZrHdDWBq974?si=wxLtF0nnPAL5h2Ms" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+<h1> <font color=purple> Bem-vindo ao GloriaFlix, o seu portal de entreterimento!!! </h1>
+</font color=purple>
+<body bgcolor=black>
+<p> <hr> <p> <font color=white> clique na opção desejada: <p> <hr><P>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/L3wNpodEKP0?si=skjwxrju9jvjonTp" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/wiJ5JVpx9jY?si=zikrCXmO3SMUUtuD" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
